# SparseRNAFolD

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bashLinecomp.sh  build.sh  callgrind.out.6427  config.h  meta.yaml  notes  out.txt  out1.txt  rna.ps
sparsemfefold/: CMakeLists.txt  Makefile  RNAlib2.pc  W_array.txt  bash.sh  bashStructure.sh  callgrind.out.3072230  callgrind.out.3111192  callgrind.out.3119745  callgrind.out.3270887  callgrind.out.3271129  callgrind.out.3354  callgrind.out.3365637  callgrind.out.3377390  callgrind.out.3377616  callgrind.out.3434  callgrind.out.3623  config.status  configure.ac  example.txt  file.txt  file2.txt  (+5 more)
sparsemfefold/ViennaRNA/: CMakeLists.txt  Makefile  Makefile.am
sparsemfefold/ViennaRNA/.deps/: 2Dfold.Plo  2Dpfold.Plo  LPfold.Plo  Lfold.Plo  MEA.Plo  ProfileAln.Plo  ProfileDist.Plo  RNAstruct.Plo  ali_plex.Plo  alifold.Plo  alipfold.Plo  alphabet.Plo  boltzmann_sampling.Plo  bs_wrappers.Plo  c_plex.Plo  centroid.Plo  cofold.Plo  combinatorics.Plo  commands.Plo  concentrations.Plo  dp_matrices.Plo  duplex.Plo  equilibrium_probs.Plo  eval.Plo  eval_wrappers.Plo  fold.Plo  fold_compound.Plo  gquad.Plo  grammar.Plo  inverse.Plo  mfe.Plo  mfe_window.Plo  mfe_window_wrappers.Plo  mfe_wrappers.Plo  mm.Plo  model.Plo  move_set.Plo  part_func.Plo  part_func_co.Plo  part_func_up.Plo  (+12 more)
sparsemfefold/ViennaRNA/constraints/.deps/: SHAPE.Plo  constraints.Plo  hard.Plo  ligand.Plo  soft.Plo
sparsemfefold/ViennaRNA/datastructures/.deps/: basic_datastructures.Plo  char_stream.Plo  lists.Plo  stream_output.Plo
sparsemfefold/ViennaRNA/io/.deps/: file_formats.Plo  file_formats_msa.Plo  io_utils.Plo
sparsemfefold/ViennaRNA/landscape/.deps/: findpath.Plo
sparsemfefold/ViennaRNA/loops/.deps/: external.Plo  external_bt.Plo  external_pf.Plo  hairpin.Plo  hairpin_bt.Plo  hairpin_pf.Plo  internal.Plo  internal_bt.Plo  internal_pf.Plo  multibranch.Plo  multibranch_bt.Plo  multibranch_pf.Plo
sparsemfefold/ViennaRNA/params/.deps/: convert.Plo  io.Plo  params.Plo
sparsemfefold/ViennaRNA/utils/.deps/: cpu.Plo  higher_order_functions.Plo  libRNA_utils_avx512_la-higher_order_functions_avx512.Plo  libRNA_utils_sse41_la-higher_order_functions_sse41.Plo  msa_utils.Plo  string_utils.Plo  structure_tree.Plo  structure_utils.Plo  svm_utils.Plo  units.Plo  utils.Plo
sparsemfefold/src/: CMakeLists.txt  Makefile  Makefile.am  SparseMFEFold  SparseMFEFold.cc  SparseMFEFold_1.cc  SparseMFEFold_2.cc  SparseMFEFold_cmdline.c  cmdline.cc  cmdline.hh  enum_ils.cc  trace_arrow.cc  trace_arrow.hh  trace_arrow1.cc
sparsemfefold/src/.deps/: SparseMFEFold.Po  SparseMFEFold_cmdline.Po  trace_arrow.Po
sparsemfefold/test/: CMakeLists.txt  Case1.cpp  Case2.cpp  Case3.cpp  Case4.cpp  Case6.cpp  Case7.cpp  Test.cpp
(+47 files in other folders)
